--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
           context: ./src
           file: ./src/Dockerfile
           push: true
-          tags:
+          tags: |
             rafaellguerra/rotten-potatoes:latest
             rafaellguerra/rotten-potatoes:${{ github.run_number }}
