--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
             rafaellguerra/rotten-potatoes:${{ github.run_number }}
   CD:
     runs-on: ubuntu-latest
+    needs: [CI]
     steps:
       - uses: actions/checkout@v2
       - name: Kubernetes set context
