--- a/k8s/web/deployment.yaml
+++ b/k8s/web/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: movies
-        image: rafaellguerra/rotten-potatoes:v1
+        image: rafaellguerra/rotten-potatoes
         resources:
           limits:
             memory: "128Mi"
