--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,9 +43,17 @@ jobs:
         with:
           method: kubeconfig
           kubeconfig: ${{ secrets.K8S_CONFIG }}
+      - name: Deploy Mongo
+        uses: Azure/k8s-deploy@v1
+        with:
+          namespace: rafaellguerra
+          manifests: |
+            k8s/mongodb/deployment.yaml
+            k8s/mongodb/service.yaml
       - name: Deploy Web
         uses: Azure/k8s-deploy@v1
         with:
+          namespace: rafaellguerra
           manifests: |
             k8s/web/deployment.yaml
           images: rafaellguerra/rotten-potatoes:${{ github.run_number }}
